--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -113,7 +113,7 @@ The number of missing values in the data (which we already saw before) is:
 sum(is.na(activity_data$steps))
 ```
 
-As a strategy to fill out the missing values in the dataset, we fill them with the mean over all days:
+As a strategy to fill out the missing values in the dataset, we fill them, for each interval, with it's mean over all days as calculated in the previous section:
 
 ```{r}
 replace_by_mean_if_NA <- function(idx){
